Fix remote desktop restoring

DeviceTypes is QFlags, which doesn't really work with QVariant,
causing the saved data to not be restored.

To fix this force it to uint when reading/writing

BUG: 480235
(cherry picked from commit 663b708b8568d7b843307b40295e29e723e23e59)